--- a/contact-us.html
+++ b/contact-us.html
@@ -71,7 +71,7 @@
           </div>
           <div class="contact_us_block">
             <h4>Contact us</h4>
-            <form action="#" class="contact_us_block_form">
+            <div class="contact_us_block_form">
               <input
                 class="email_input"
                 type="text"
@@ -84,7 +84,7 @@
               <div class="submit_btn">
                 <a href="./contact-us.html"> <button>Contact us</button></a>
               </div>
-            </form>
+            </div>
           </div>
         </div>
 
@@ -149,6 +149,5 @@
           .classList.toggle("age_modal_visible");
       }
     </script>
-
   </body>
 </html>
