--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
     </section>
 
-    <header class="main_header">
+    <header class="main_header china_slots">
       <div class="header_container container_s">
         <div class="header_content">
           <p>CHINA SLOTS GAME</p>
@@ -132,7 +132,7 @@
           </div>
           <div class="contact_us_block">
             <h4>Contact us</h4>
-            <form action="#" class="contact_us_block_form">
+            <div class="contact_us_block_form">
               <input
                 class="email_input"
                 type="text"
@@ -145,7 +145,7 @@
               <div class="submit_btn">
                 <a href="./contact-us.html"> <button>Contact us</button></a>
               </div>
-            </form>
+            </div>
           </div>
         </div>
 
