--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -130,7 +130,7 @@
           </div>
           <div class="contact_us_block">
             <h4>Contact us</h4>
-            <form action="#" class="contact_us_block_form">
+            <div  class="contact_us_block_form">
               <input
                 class="email_input"
                 type="text"
@@ -143,7 +143,7 @@
               <div class="submit_btn">
                 <a href="./contact-us.html"> <button>Contact us</button></a>
               </div>
-            </form>
+            </div>
           </div>
         </div>
 
