--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -113,7 +113,7 @@
           </div>
           <div class="contact_us_block">
             <h4>Contact us</h4>
-            <form action="#" class="contact_us_block_form">
+            <div class="contact_us_block_form">
               <input
                 class="email_input"
                 type="text"
@@ -126,7 +126,7 @@
               <div class="submit_btn">
                 <a href="./contact-us.html"> <button>Contact us</button></a>
               </div>
-            </form>
+            </div>
           </div>
         </div>
 
