--- a/play-now.html
+++ b/play-now.html
@@ -46,7 +46,7 @@
           </div>
           <div class="contact_us_block">
             <h4>Contact us</h4>
-            <form action="#" class="contact_us_block_form">
+            <div class="contact_us_block_form">
               <input
                 class="email_input"
                 type="text"
@@ -59,7 +59,7 @@
               <div class="submit_btn">
                 <a href="./contact-us.html"> <button>Contact us</button></a>
               </div>
-            </form>
+            </div>
           </div>
         </div>
 
