--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -12,22 +12,25 @@
         <a href="./index.html">
           <h1 class="logo">Carnivaltableau</h1>
         </a>
-        <a href="./play-now.html">
-          <button class="play_btn">
-            play now
-            <svg
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              id="arrow-right"
-              viewBox="0 0 1536 1896.0833"
-            >
-              <path
-                d="M1472 960q0 54-37 91l-651 651q-39 37-91 37-51 0-90-37l-75-75q-38-38-38-91t38-91l293-293H117q-52 0-84.5-37.5T0 1024V896q0-53 32.5-90.5T117 768h704L528 474q-38-36-38-90t38-90l75-75q38-38 90-38 53 0 91 38l651 651q37 35 37 90z"
-                fill="#fff"
-              ></path>
-            </svg></button
-        ></a>
+        <div class="nav_right">
+          <a href="./contact-us.html"><p>Contact Us</p></a>
+          <a href="./play-now.html">
+            <button class="play_btn">
+              play now
+              <svg
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                id="arrow-right"
+                viewBox="0 0 1536 1896.0833"
+              >
+                <path
+                  d="M1472 960q0 54-37 91l-651 651q-39 37-91 37-51 0-90-37l-75-75q-38-38-38-91t38-91l293-293H117q-52 0-84.5-37.5T0 1024V896q0-53 32.5-90.5T117 768h704L528 474q-38-36-38-90t38-90l75-75q38-38 90-38 53 0 91 38l651 651q37 35 37 90z"
+                  fill="#fff"
+                ></path>
+              </svg></button
+          ></a>
+        </div>
       </div>
     </nav>
 
@@ -119,12 +122,12 @@
                 type="text"
                 placeholder="Email address"
               />
-              <div class="confirm_check" onclick="toggleAgeModal()">
+              <div class="confirm_check">
                 <input type="checkbox" name="" id="" />
                 <p>I am 18+ years old</p>
               </div>
               <div class="submit_btn">
-                <a href="./contact-us.html"> <button>Contact us</button></a>
+                <button>Contact us</button>
               </div>
             </div>
           </div>
@@ -162,8 +165,8 @@
         </p>
 
         <div class="age_modal_btns">
-          <button onclick="toggleAgeModal()">I'm Under 18</button>
-          <button onclick="toggleAgeModal()">I'm 18 or Older</button>
+          <button>I'm Under 18</button>
+          <button>I'm 18 or Older</button>
         </div>
       </div>
     </div>
@@ -182,14 +185,20 @@
           sessionStorage.setItem("cookiesAccepted", "true");
         });
       });
-    </script>
 
-    <script>
-      function toggleAgeModal() {
-        document
-          .querySelector(".overlay")
-          .classList.toggle("age_modal_visible");
-      }
+      document.addEventListener("DOMContentLoaded", () => {
+        const ageModal = document.querySelector(".overlay");
+        const closeButton = document.querySelector(".close_modal");
+
+        if (sessionStorage.getItem("age_modal") === "true") {
+          ageModal.classList.remove("age_modal_visible");
+        }
+
+        closeButton.addEventListener("click", () => {
+          ageModal.classList.remove("age_modal_visible");
+          sessionStorage.setItem("age_modal", "true");
+        });
+      });
     </script>
   </body>
 </html>
